Server side clustering

--- a/src/main/webapp/pages/locations.html
+++ b/src/main/webapp/pages/locations.html
@@ -1,12 +1,12 @@
 
 
+<H1>Locations</H1>
 
-<div class="jumbotron text-center">
-    <h1>Locations</h1>
+<ui-gmap-google-map center='map.center'  zoom='zoom' control='map' events="mapEvents" options='map.options' bounds="bounds" >
+    <ui-gmap-markers models="markers"  coords="'self'" options="'options'" doCluster="false"  doRebuildAll="false" events="locationEvents"  >
+    </ui-gmap-markers>
 
-    <p>{{ message }}</p>
-</div>
-
+</ui-gmap-google-map>
 
 
 <!--
