- upgraded to newest version of angular maps

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
     <script src="webjars/angular-ui-bootstrap/0.12.1-1/ui-bootstrap.js"></script>
     <script src="webjars/angular-ui-bootstrap/0.12.1-1/ui-bootstrap-tpls.min.js"></script>
     <script src="webjars/lodash/3.3.1/lodash.min.js"></script>
-    <script src="webjars/angular-google-maps/2.0.11/angular-google-maps.min.js"></script>
+    <script src="webjars/angular-google-maps/2.1.1/dist/angular-google-maps.min.js"></script>
     <script src="webjars/codef0rmer-angular-dragdrop/1.0.11/angular-dragdrop.min.js"></script>
     <script src="webjars/angular-block-ui/0.2.0/dist/angular-block-ui.min.js"></script>
     <script src="webjars/bootstrap-toggle/2.2.0/js/bootstrap-toggle.min.js"></script>
