--- a/src/main/webapp/pages/locations.html
+++ b/src/main/webapp/pages/locations.html
@@ -2,8 +2,8 @@
 
 <H1>Locations</H1>
 
-<ui-gmap-google-map center='map.center'  zoom='zoom' control='map' events="mapEvents" options='map.options' bounds="bounds" >
-    <ui-gmap-markers models="markers"  coords="'self'" options="'options'" doCluster="false"  doRebuildAll="false" events="locationEvents"  >
+<ui-gmap-google-map center='map.center'  zoom='zoom' control='map' events="mapEvents" options='map.options' >
+    <ui-gmap-markers models="markers"  coords="'self'" options="'options'" doCluster="false"  doRebuildAll="true" events="locationEvents"  >
     </ui-gmap-markers>
 
 
